<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Chowdown</string>
    <string name="settings_name">Settings</string>
    <string name="lunches_title_text">Join A Lunch</string>
    <string name="lunch_detail_title_text">Join This Lunch?</string>
    <string name="dummy_date">Nov 15</string>
    <string name="dummy_time_frame">12 PM - 1 PM</string>
    <string name="dummy_lunch_description">A lunch to celebrate Kansas!</string>
    <string name="dummy_started_by">Started by Coolio</string>
    <string name="dummy_attending">You are attending!</string>
    <string name="dummy_voting_ends">Voting ends in 11 minutes</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="welcome_to_chowdown">Welcome to ChowDown!</string>
    <string name="username_prompt">Create your lunch credentials:</string>
    <string name="username_can_be_changed">(Change any time, in the ChowDown Settings)</string>
    <string name="dummy_attendees">Attendees\n-Cory\n-Kate\n-Ken\n-Matt</string>
    <string name="voting_details_text">Clicking YES will allow you to vote on the restaurant for this lunch</string>
    <string name="yes_button_text">YES</string>
    <string name="no_button_text">NO</string>
    <string name="save">save</string>
    <string name="title_activity_ranking">RankingActivity</string>
    <string name="hello_world">Hello world!</string>

    <string name="organizer_label">Organizer</string>
    <string name="label_restaurant_first_choice">1st restaurant choice</string>
    <string name="rank_restaurants_prompt">Please choose your top three choices.  Drag and drop the restaurants into your preferred order with the first restaurant being your top choice</string>
    <string name="submit_vote_button_text">Submit vote</string>
    <string name="post_vote_title">Congrats dude, you\'re going to lunch at:</string>
    <string name="fake_time">11:34</string>
    <string name="title_activity_post_vote">PostVoteActivity</string>
    <string name="confirm_button">Confirm</string>

    <string name="add_new_lunch">Create New Lunch</string>
    <string name="create_lunch">CREATE!</string>
    <string name="lunch_description">Lunch Description</string>
    <string name="enter_description">Enter description here..</string>
    <string name="lunch_start_time">Lunch Start Time (should happen second)</string>
    <string name="lunch_end_time">Lunch End Time (should happen last)</string>
    <string name="vote_end_time">Vote End Time (should happen first)</string>
    <string name="choose_time">Choose Date/Time</string>
    <string name="lunch_created">Lunch Created. Voting Begins Now.</string>
    <string name="set_time_date">Set Date/Time</string>
    <string name="datetime_are_set">Date/Time are set</string>
    <string name="set_date">SET DATE</string>
    <string name="set_time">SET TIME</string>
    <string name="change_fields">You must set all fields before creating...</string>
    <string name="date_order">Vote End Time must happen before Lunch Start Time, which must happen before Lunch End Time...</string>
    <string name="after_now">All chosen dates and times must happen after the current date and time...</string>

</resources>
