<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/fragment_lunch_detail"
    tools:context=".DetailFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/id_of_background"
        android:background="@drawable/pizza"
        tools:context=".DetailFragment">

        <TextView
            android:id="@+id/lunch_detail_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="10dp"
            android:text="@string/lunch_detail_title_text"
            android:textSize="30sp"
            android:background="@color/DarkRed"
            android:textColor="@color/White"/>

        <TextView
            android:id="@+id/text_detail_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lunch_detail_title"
            android:layout_marginLeft="25dp"
            android:text="@string/dummy_date"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/text_detail_time_frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lunch_detail_title"
            android:layout_marginLeft="25dp"
            android:layout_toRightOf="@id/text_detail_date"
            android:text="@string/dummy_time_frame"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/text_detail_lunch_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/text_detail_date"
            android:layout_below="@id/text_detail_date"
            android:layout_marginRight="25dp"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:text="@string/dummy_lunch_description"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_started_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/text_detail_lunch_description"
            android:layout_below="@id/text_detail_lunch_description"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:text="@string/dummy_started_by"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_detail_attendees"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_started_by"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:layout_alignLeft="@id/text_detail_lunch_description"
            android:text="@string/dummy_attendees"
            android:textSize="20sp"
            android:lineSpacingMultiplier="1.5"/>

        <TextView
            android:id="@+id/voting_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/text_detail_date"
            android:layout_below="@id/text_detail_attendees"
            android:layout_marginRight="25dp"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:text="@string/dummy_voting_ends"
            android:textSize="20dp" />

        <TextView
            android:visibility="invisible"
            android:id="@+id/voting_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/text_detail_date"
            android:layout_below="@id/voting_status"
            android:layout_marginRight="25dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/voting_details_text"
            android:textSize="20dp" />

    </RelativeLayout>

    <LinearLayout android:id="@+id/vote_button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:visibility="invisible">

        <Button
            android:id="@+id/no_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no_button_text"
            android:background="@color/DarkRed"
            android:textColor="@color/White"
            android:textSize="25sp" />

        <Button
            android:id="@+id/yes_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/yes_button_text"
            android:background="@color/DarkGoldenrod"
            android:textColor="@color/White"
            android:textSize="25sp" />


    </LinearLayout>

</LinearLayout>