<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:orientation="vertical"
>

    <ImageView
        android:id="@+id/thumbsup"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="70dp"
        android:src="@drawable/thumbs_up"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/post_vote_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post_vote_title"
        android:layout_centerHorizontal="true"
        android:textSize="30dp"
        android:gravity="center"
        android:paddingTop="30dp"
        android:layout_below="@id/thumbsup"/>

    <TextView
        android:id="@+id/post_vote_lunch_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fake_time"
        android:layout_centerHorizontal="true"
        android:textSize="70dp"
        android:gravity="center"
        android:paddingTop="10dp"
        android:layout_below="@id/post_vote_title"/>

    <Button android:id="@+id/confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_button"
        android:textSize="20dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"/>

</RelativeLayout>
