<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="90dp"
        android:background="@color/LightSkyBlue">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textView_welcome"
            android:text="@string/welcome_to_chowdown"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="28sp"
            android:textColor="@color/AntiqueWhite"
            android:background="@color/DarkSlateBlue"
            android:paddingTop="17dp"
            android:paddingLeft="17dp"
            android:paddingRight="17dp"
            android:paddingBottom="17dp"
            android:gravity="center_vertical|center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textView_username_prompt"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="17dp"
            android:layout_marginRight="17dp"
            android:text="@string/username_prompt"
            android:textSize="22sp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editText_username_entry"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="17dp"
                android:hint="@string/username"
                android:layout_weight="5"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_save"
                android:layout_weight="1"
                android:layout_marginTop="17dp"
                android:layout_marginRight="17dp"
                android:layout_marginBottom="17dp"
                android:text="@string/save"
                android:singleLine="false"
                android:background="@color/DarkSlateBlue"
                android:textColor="@color/AntiqueWhite"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_can_be_changed"
            android:id="@+id/textView_username_can_be_changed"
            android:layout_gravity="center"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="17dp"
            android:layout_marginBottom="17dp"
            android:textIsSelectable="false"
            android:singleLine="false"
            android:textSize="15sp"/>

    </LinearLayout>

</FrameLayout>